[project]
name = "lalalangchain"
version = "0.1.0"
description = "Similarity search — embedding text into a FAISS vector store and retrieving by meaning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.14.3",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
]
